packages/kit/test/apps/basics/src/routes/load/invalidation/depends/+page.server.js
/** @type {import('./$types').PageServerLoad} */
export function load({ depends }) {
	depends('invalidate-depends:server');
	return {
		server: new Date().getTime()
	};
}
